--- a/web/.env.production
+++ b/web/.env.production
@@ -1,5 +1,3 @@
 # Production Environment Variables for Frontend
-# This will be updated with your actual EC2 IP after backend deployment
-
-# Backend API URL - Update this after deploying backend
-NEXT_PUBLIC_API_URL=http://YOUR-EC2-IP-HERE
+# Backend API URL
+NEXT_PUBLIC_API_URL=http://13.219.183.238:5000
