--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/next": "^8.0.7",
+    "@types/node": "^20.19.25",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "typescript": "^5.3.0"
   },
   "dependencies": {
+    "react-icons": "^5.5.0",
     "react-native-worklets-core": "^1.6.2"
   }
 }
