--- a/web/.env.production
+++ b/web/.env.production
@@ -1,3 +1,3 @@
 # Production Environment Variables for Frontend
 # Backend API URL
-NEXT_PUBLIC_API_URL=http://13.219.183.238:5000/api/v1
+NEXT_PUBLIC_API_URL=https://commandcentre.tekplugin.com/api/v1
