Fix all TypeScript errors in backend and web, update types, and resolve missing variables

--- a/web/package.json
+++ b/web/package.json
@@ -17,18 +17,18 @@
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "pdfkit": "^0.17.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.3",
     "react-redux": "^9.0.4",
     "recharts": "^2.10.3",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
-    "@types/node": "^20.10.7",
-    "@types/react": "^18.2.47",
+    "@types/node": "^20.19.25",
+    "@types/react": "^18.3.27",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
