--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.3",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.0.4",
     "recharts": "^2.10.3",
     "socket.io-client": "^4.6.1"
